# openkmi

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
examples/: dagrecords.ipynb  klimaat_temp_2024.ipynb  neerslagoverschot_ruimtelijk.ipynb  tutorial.ipynb  tutorial_Alaro.ipynb  tutorial_aws.ipynb  tutorial_neerslag_overschot.ipynb  tutorial_synop.ipynb  warning_stripes.ipynb
examples/data/: province_3812.dbf  province_3812.shp  province_3812.shx
pykmi/: synoptic.py
src/openkmi/: grid_data.py  point_obs.py  synoptic.py
src/pykmi/: synoptic.py
src/pyrmi/: synoptic.py
tests/: test_alaro.py  test_aws.py  test_synop.py  tests.py
