[metadata]
name = pyrmi
version = 0.0.2
author = Tim Franken
author_email = tim.franken@sumaqua.be
license = mit
description =  Python package to download synoptic measurements from RMI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/Sumaqua/pykmi
project_urls =
    Documentation = https://gitlab.com/Sumaqua/pykmi
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Intended Audience :: Developers

[options]
package_dir =
    = src

install_requires =
    pandas
    owslib

python_requires = >=3.6

[options.packages.find]
where = src
