[metadata]
name = openkmi
version = 0.1.0
author = Tim Franken
author_email = tim.franken@sumaqua.be
license = mit
description = Python package to download open data from KMI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TimFranken/openkmi
project_urls =
    Documentation = https://github.com/TimFranken/openkmi
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Intended Audience :: Developers

[options]
package_dir =
    = src

install_requires =
    pandas
    owslib

python_requires = >=3.6

[options.packages.find]
where = src
